# neuromorphic-paper-trading

./: .gitignore  AUTONOMOUS_TRADING_GUIDE.md  BARTER_COMPATIBILITY_ANALYSIS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  GRAFANA_FINAL_SETUP.md  GRAFANA_SETUP.md  GRAFANA_TROUBLESHOOTING.md  PODMAN_COMPOSE_SETUP.md  PODMAN_GRAFANA_FIX.md  PODMAN_HOST_NETWORKING.md  QUICK_START.md  README.md  dashboard.html  demo-stock-api.py  docker-compose.yml  grafana-testdata-simulation.md  metrics_server.py  prometheus_metrics_server.py  simple_metrics_server.py  start-trading-system.sh  stop-trading-system.sh  test-system.sh  test_workspace.sh  verify-system.sh
.cargo/: config.toml
.serena/: project.yml
examples/: websocket_demo.rs
grafana/: autonomous-trading-dashboard.json  neuromorphic-container-dashboard.json  neuromorphic-dashboard-fixed.json  neuromorphic-infinity-dashboard.json  neuromorphic-simple-dashboard.json  neuromorphic-trading-dashboard.json  neuromorphic-working-dashboard.json  system-overview-dashboard.json
grafana/dashboards/: demo-stock-dashboard.json  simple-trading-dashboard.json  test-dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: infinity.yml  neuromorphic.yml
neuromorphic-barter-bridge/: Cargo.toml
neuromorphic-barter-bridge/src/: lib.rs
neuromorphic-core/: Cargo.toml
neuromorphic-core/examples/: autonomous_trader.rs  demo_neuromorphic.rs  demo_with_grafana.rs
neuromorphic-core/src/: lib.rs  main.rs
neuromorphic-core/src/api/: mod.rs
neuromorphic-core/src/exchanges/: binance.rs  binance_websocket.rs  book_manager.rs  connector.rs  mod.rs  orderbook.rs  types.rs  websocket.rs
neuromorphic-core/src/market_data/: normalizers.rs  symbol_mapper.rs  universal.rs
neuromorphic-core/src/market_scanner/: analytics.rs  data_feeds.rs  mod.rs  scanner.rs  screener.rs  strategies.rs
neuromorphic-core/src/metrics/: mod.rs
neuromorphic-core/src/paper_trading/: engine.rs  order_manager.rs  position_manager.rs  risk_manager.rs
paper-trader-app/: Cargo.toml
paper-trader-app/examples/: hybrid_demo.rs
paper-trader-app/src/: main.rs
src/: lib.rs
src/exchanges/: binance_websocket.rs  book_manager.rs  errors.rs  mod.rs  orderbook.rs  websocket.rs
src/market_data/: mod.rs  spike_bridge.rs  time_sync.rs  unified_feed.rs
src/paper_trading/: mod.rs  order_manager.rs  position_manager.rs
