[package]
name = "paper-trader-app"
version = "0.1.0"
edition = "2021"
authors = ["Ididia Serfaty <ididiaserfaty@protonmail.com>"]
description = "Neuromorphic paper trading application using Barter-rs framework"
license = "MIT"

[[bin]]
name = "neuromorphic-trader"
path = "src/main.rs"

[[example]]
name = "hybrid_demo"
path = "examples/hybrid_demo.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

# Barter dependencies
barter = { workspace = true }
barter-data = { workspace = true }
barter-execution = { workspace = true }
barter-integration = { workspace = true }

# Internal dependencies
neuromorphic-core = { path = "../neuromorphic-core" }
neuromorphic-barter-bridge = { path = "../neuromorphic-barter-bridge" }

[dev-dependencies]
tokio-test = { workspace = true }